# delivery-loop

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: request.yml
.github/workflows/: update-dashboard-data.yml
delivery_loop/: __init__.py  cli.py  config.py  dashboard.html  devseed.py  github.py  github_sync.py  leases.py  models.py  policy.py  scheduler.py  server.py  state_machine.py  store.py  worker.py
delivery_loop/agents/: command.py
docs/: index.html  initial-design.md
docs/data/: coo-2022-delivery-loop-hello-world.json  coo-2022-openearth.json
scripts/: update_dashboard_data.py
tests/: test_github_sync.py  test_leases.py  test_policy.py  test_scheduler.py  test_server.py  test_state_machine.py  test_store.py
